test/Fail/Issue779data.err
Issue779data.agda:4.3-23: error: [NotValidBeforeField]
This declaration is illegal in a record before the last field
when scope checking the declaration
  record R where
    data Bla : Set where
    field F : Set
